src/styles.scss
/* ... */
/* This is for dropdown anchor to have a mouse pointer without redirecting to a different page */
.dropdown-menu li a {
  cursor: pointer;
}
/* End Temporary Styles - Need to Refactor Later */
.changePage {
  display: inline-block;
  padding: 5px 14px;
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 15px;
  color: #487980;
  &:hover {
    background-color: #f2f2f2;
  }
}

.entry-row {
  height: 52px;
}

.footer-link:link {
  text-decoration: none;
}

.footer-link:hover {
  text-decoration: underline;
}

.my-entry-button-group {
  margin-bottom: 5px;
}

.nav-tabs.nav-justified > li > a {
  margin: 0px !important;
}

// This is like the bootstrap 4 utility class, remove once we have the real one
.align-middle {
  vertical-align: middle;
}

// Reduces the width of the sidebar tab by half (160px default). Can't seem to move this to the sidebar scss for some reason
app-sidebar-accordion
  .mat-accordion
  > .mat-expansion-panel
  > .mat-expansion-panel-content
  > .mat-expansion-panel-body
  > .mat-tab-group
  > .mat-tab-header
  > .mat-tab-label-container
  > .mat-tab-list
  > .mat-tab-labels {
  .mat-tab-label[role^='tab'] {
    min-width: 80px;
  }
}

// Make the dropdown at least the size of the default material dropdown.
// Making the general width to grow to 50% of the parent width so that there's more room to display long file names
// TODO: Ideally this should stretch to the length of the longest dropdown option.
app-select.longer {
  min-width: 180px;
  width: 50%;
}

mat-icon.star {
  font-size: 16px;
  height: 16px;
}

.landing-search {
  width: 60%;
  max-width: 600px;
  padding-left: 30px;
  padding-top: 3px;
  padding-bottom: 3px;
  border: none;
  line-height: 2em;
  background: white url(../images/search-button.png) left center no-repeat;
  background-position: 5px;
  outline: none;
  color: black;
}

.ellipsis-overflow {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.notification-display p {
  text-align: center;
  font-size: 18px;
}

#workflow-path,
#tool-path {
  overflow-wrap: break-word;
}

